--- a/campaign-service/src/main/resources/application.properties
+++ b/campaign-service/src/main/resources/application.properties
@@ -30,6 +30,10 @@ springdoc.swagger-ui.path=/swagger-ui.html
 # Identity Service (để validate fundOwnerId khi tạo campaign)
 identity.service.url=http://localhost:8081
 
+# JWT Configuration
+jwt.secret=${JWT_SECRET:trustfund-secret-key-for-jwt-token-generation-minimum-256-bits-required-for-security}
+jwt.expiration=86400000
+
 # Actuator
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
