build media service

--- a/identity-service/src/main/resources/application.properties
+++ b/identity-service/src/main/resources/application.properties
@@ -45,4 +45,7 @@ springdoc.swagger-ui.tryItOutEnabled=true
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
+# Media service base URL (for avatarMediaId validation)
+media.service.url=${MEDIA_SERVICE_URL:http://localhost:8083}
+
 
