--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,28 @@ services:
     networks:
       - trustfund
 
+  media-service:
+    build: ./media-service
+    container_name: trustfund-media-service
+    restart: always
+    ports:
+      - "8083:8083"
+    environment:
+      SPRING_PROFILES_ACTIVE: "prod"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://mysql:3306/trustfundme_media_db?createDatabaseIfNotExist=true"
+      SPRING_DATASOURCE_USERNAME: "root"
+      SPRING_DATASOURCE_PASSWORD: "12345"
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: "http://discovery-server:8761/eureka"
+      JWT_SECRET: "${JWT_SECRET}"
+      SUPABASE_URL: "${SHARED_SUPABASE_URL}"
+      SUPABASE_KEY: "${SHARED_SUPABASE_KEY}"
+      SUPABASE_STORAGE_BUCKET: "${SHARED_SUPABASE_BUCKET}"
+    depends_on:
+      - mysql
+      - discovery-server
+    networks:
+      - trustfund
+
 networks:
   trustfund:
     driver: bridge
