--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -19,12 +19,20 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 spring.cloud.gateway.routes[0].id=identity-service
 spring.cloud.gateway.routes[0].uri=lb://identity-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/auth/**
+spring.cloud.gateway.routes[1].id=campaign-service
+spring.cloud.gateway.routes[1].uri=lb://campaign-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/campaigns/**
 
+# # CORS Configuration
+# spring.cloud.gateway.globalcors.cors-configurations[/**].allowed-origins=*
+# spring.cloud.gateway.globalcors.cors-configurations[/**].allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+# spring.cloud.gateway.globalcors.cors-configurations[/**].allowed-headers=*
+# spring.cloud.gateway.globalcors.cors-configurations[/**].allow-credentials=true
 # CORS Configuration
-spring.cloud.gateway.globalcors.cors-configurations[/**].allowed-origins=*
+spring.cloud.gateway.globalcors.cors-configurations[/**].allowed-origins=http://localhost:3000
 spring.cloud.gateway.globalcors.cors-configurations[/**].allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.cloud.gateway.globalcors.cors-configurations[/**].allowed-headers=*
-spring.cloud.gateway.globalcors.cors-configurations[/**].allow-credentials=true
+spring.cloud.gateway.globalcors.cors-configurations[/**].allow-credentials=false
 
 # Actuator
 management.endpoints.web.exposure.include=health,info,gateway
