fix add feed service into api gateway

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -23,6 +23,10 @@ spring.cloud.gateway.routes[1].id=campaign-service
 spring.cloud.gateway.routes[1].uri=lb://campaign-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/campaigns/**
 
+spring.cloud.gateway.routes[2].id=feed-service
+spring.cloud.gateway.routes[2].uri=lb://feed-service
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/feed-posts/**
+
 # # CORS Configuration
 # spring.cloud.gateway.globalcors.cors-configurations[/**].allowed-origins=*
 # spring.cloud.gateway.globalcors.cors-configurations[/**].allowed-methods=GET,POST,PUT,DELETE,OPTIONS
