--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -35,6 +35,10 @@ spring.cloud.gateway.routes[4].id=identity-service-bank
 spring.cloud.gateway.routes[4].uri=lb://identity-service
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/bank-accounts/**
 
+spring.cloud.gateway.routes[5].id=media-service
+spring.cloud.gateway.routes[5].uri=lb://media-service
+spring.cloud.gateway.routes[5].predicates[0]=Path=/api/media/**
+
 # # CORS Configuration
 # spring.cloud.gateway.globalcors.cors-configurations[/**].allowed-origins=*
 # spring.cloud.gateway.globalcors.cors-configurations[/**].allowed-methods=GET,POST,PUT,DELETE,OPTIONS
