route for chat-service in api gateway

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -46,6 +46,10 @@ spring.cloud.gateway.routes[6].id=flag-service
 spring.cloud.gateway.routes[6].uri=lb://flag-service
 spring.cloud.gateway.routes[6].predicates[0]=Path=/api/flags/**
 
+spring.cloud.gateway.routes[7].id=chat-service
+spring.cloud.gateway.routes[7].uri=lb://chat-service
+spring.cloud.gateway.routes[7].predicates[0]=Path=/api/conversations/**
+
 # # CORS Configuration
 # spring.cloud.gateway.globalcors.cors-configurations[/**].allowed-origins=*
 # spring.cloud.gateway.globalcors.cors-configurations[/**].allowed-methods=GET,POST,PUT,DELETE,OPTIONS
