--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.cloud.gateway.routes[0].uri=lb://identity-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/auth/**, /api/kyc/**
 spring.cloud.gateway.routes[1].id=campaign-service
 spring.cloud.gateway.routes[1].uri=lb://campaign-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/campaigns/**
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/campaigns/**, /api/fundraising-goals/**
 
 spring.cloud.gateway.routes[2].id=feed-service
 spring.cloud.gateway.routes[2].uri=lb://feed-service
