Add campaign type - CRUD bank - validation infor fundrise, banking, campaign - fix/add upload video, file - api upgrade donor to fund-owner

--- a/media-service/src/main/resources/application.properties
+++ b/media-service/src/main/resources/application.properties
@@ -29,4 +29,6 @@ supabase.url=${SHARED_SUPABASE_URL:}
 supabase.key=${SHARED_SUPABASE_KEY:}
 supabase.storage.bucket=${SHARED_SUPABASE_BUCKET:}
 
-
+# Tăng giới hạn upload (Ví dụ: 50MB)
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=50MB
