--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -25,6 +25,9 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/api/auth/**, /api/kyc/**
 spring.cloud.gateway.routes[1].id=campaign-service
 spring.cloud.gateway.routes[1].uri=lb://campaign-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/campaigns/**
+spring.cloud.gateway.routes[8].id=campaign-service-goals
+spring.cloud.gateway.routes[8].uri=lb://campaign-service
+spring.cloud.gateway.routes[8].predicates[0]=Path=/api/fundraising-goals/**
 
 spring.cloud.gateway.routes[2].id=feed-service
 spring.cloud.gateway.routes[2].uri=lb://feed-service
@@ -64,5 +67,11 @@ spring.cloud.gateway.globalcors.cors-configurations[/**].allow-credentials=false
 # Actuator
 management.endpoints.web.exposure.include=health,info,gateway
 management.endpoint.health.show-details=always
+
+# Multipart Configuration (to handle large uploads)
+# Since this is a Reactive Gateway, we use WebFlux/Codec properties
+spring.http.codec.max-in-memory-size=50MB
+spring.webflux.multipart.max-file-size=50MB
+spring.webflux.multipart.max-request-size=50MB
 
 
