--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -22,41 +22,42 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 spring.cloud.gateway.routes[0].id=identity-service
 spring.cloud.gateway.routes[0].uri=lb://identity-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/auth/**, /api/kyc/**
+
 spring.cloud.gateway.routes[1].id=campaign-service
 spring.cloud.gateway.routes[1].uri=lb://campaign-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/campaigns/**
-spring.cloud.gateway.routes[8].id=campaign-service-goals
-spring.cloud.gateway.routes[8].uri=lb://campaign-service
-spring.cloud.gateway.routes[8].predicates[0]=Path=/api/fundraising-goals/**
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/campaigns/**, /api/fundraising-goals/**
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/campaigns/**, /api/campaign-follows/**
 
 spring.cloud.gateway.routes[2].id=feed-service
 spring.cloud.gateway.routes[2].uri=lb://feed-service
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/feed-posts/**
 
-spring.cloud.gateway.routes[7].id=feed-service-forum
-spring.cloud.gateway.routes[7].uri=lb://feed-service
-spring.cloud.gateway.routes[7].predicates[0]=Path=/api/forum/**
+spring.cloud.gateway.routes[3].id=feed-service-forum
+spring.cloud.gateway.routes[3].uri=lb://feed-service
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/forum/**
 
-spring.cloud.gateway.routes[3].id=identity-service-users
-spring.cloud.gateway.routes[3].uri=lb://identity-service
-spring.cloud.gateway.routes[3].predicates[0]=Path=/api/users/**
-
-spring.cloud.gateway.routes[4].id=identity-service-bank
+spring.cloud.gateway.routes[4].id=identity-service-users
 spring.cloud.gateway.routes[4].uri=lb://identity-service
-spring.cloud.gateway.routes[4].predicates[0]=Path=/api/bank-accounts/**
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/users/**
 
-spring.cloud.gateway.routes[5].id=media-service
-spring.cloud.gateway.routes[5].uri=lb://media-service
-spring.cloud.gateway.routes[5].predicates[0]=Path=/api/media/**
+spring.cloud.gateway.routes[5].id=identity-service-bank
+spring.cloud.gateway.routes[5].uri=lb://identity-service
+spring.cloud.gateway.routes[5].predicates[0]=Path=/api/bank-accounts/**
 
-spring.cloud.gateway.routes[6].id=flag-service
-spring.cloud.gateway.routes[6].uri=lb://flag-service
-spring.cloud.gateway.routes[6].predicates[0]=Path=/api/flags/**
+spring.cloud.gateway.routes[6].id=media-service
+spring.cloud.gateway.routes[6].uri=lb://media-service
+spring.cloud.gateway.routes[6].predicates[0]=Path=/api/media/**
 
-spring.cloud.gateway.routes[7].id=chat-service
-spring.cloud.gateway.routes[7].uri=lb://chat-service
-spring.cloud.gateway.routes[7].predicates[0]=Path=/api/conversations/**
+spring.cloud.gateway.routes[7].id=flag-service
+spring.cloud.gateway.routes[7].uri=lb://flag-service
+spring.cloud.gateway.routes[7].predicates[0]=Path=/api/flags/**
+
+spring.cloud.gateway.routes[8].id=chat-service
+spring.cloud.gateway.routes[8].uri=lb://chat-service
+spring.cloud.gateway.routes[8].predicates[0]=Path=/api/conversations/**, /ws/**
+
+spring.cloud.gateway.routes[9].id=campaign-service-goals
+spring.cloud.gateway.routes[9].uri=lb://campaign-service
+spring.cloud.gateway.routes[9].predicates[0]=Path=/api/fundraising-goals/**
 
 # # CORS Configuration
 # spring.cloud.gateway.globalcors.cors-configurations[/**].allowed-origins=*
